<resources>
    <!-- Principal-->
    <string name="app_name">interfacesSOS</string>
    <string name="titulo_principal">SOS</string>
    <string name="txt_tela01">Bom! Vamos começar,
    primeiro me informe seu nome</string>
    <string name="edt_nome">Nome</string>
    <string name="txt_edt_nome">Nome:</string>
    <!-- Segunda-->
    <string name="titulo_segundaEtapa">SOS</string>
    <string name="txt_segundaEtapa">Agora me informe seu email:</string>
    <string name="txt_edt_email">Digite seu email:</string>
    <string name="edt_email">Email</string>
    <!-- Terceira-->
    <string name="titulo_terceiraEtapa">SOS</string>
    <string name="txt_terceiraEtapa">Hmm, agora uma parte bem importante!</string>
    <string name="txt_edt_contatos">Digite seus contatos:</string>
    <string name="edt_contato">(XX) XXXXX-XXXX</string>
    <!-- Final-->
    <string name="titulo_finalEtapa">Protinho!</string>
    <string name="txt_finalEtapa">Confira seus dados</string>
    <string name="txt_edt_final">Confirme seus Dados:</string>
    <string name="edt_final_nome">Nome</string>
    <string name="edt_final_email">Email</string>
    <string name="edt_cont1">(XX) XXXXX-XXXX</string>
    <string name="edt_cont2">(XX) XXXXX-XXXX</string>
    <string name="title_activity_tela_localizacao">TelaLocalizacaoActivity</string>
    <string name="info">Informações sobre localização</string>

    <string name="txt_menu">Menu</string>
    <string name="btn_cad_cont">Cadastrar Contato</string>
    <string name="btn_editar_cont">Editar Dados</string>
    <string name="txt_sair">Sair</string>
    <string name="txt_box_localizacao">Sua Localização</string>
    <string name="latitude">"Latitude: "</string>
    <string name="longitude">Longitude: </string>
    <string name="ultimaAtt">"Ultima Atulização: "</string>
    <string name="txt2_box_localizacao">Compartilhar localização</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="editar_contato">Editar Contato</string>
    <string name="adicionar_contato">Adicionar Contato</string>
    <string name="title_activity_tela_informacoes_gerais">Leanback TelaInformacoesGerais</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>